data/derived/sp14/progs/unify/prog2193.ml.out
Characters 0-1:
  x[3];;
  ^
Error: This expression has type int
       This is not a function; it cannot be applied.
